--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,5 +1,8 @@
-.locationList{
-    
+.forecast-title{
+    color:#fff;
+    text-align: center;
+    padding-top:15px;
+    padding-bottom:15px;
 }
 
 @media (max-width: 64em){
