--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .details{
     background: #999;
-    height: 100vh;
-    width: %;
-
+    /*height: 100vh;*/
+    width: 100%;
+   margin-top:15px;
 }
