--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,8 +8,14 @@
 @media (max-width: 64em){
     .locationList{
        
-        max-height: 30vh;
-        overflow: auto;
+        max-height: 40vh;
         margin-bottom: 20px;
     }
+}
+
+.locationList{
+       
+    height: 85vh;
+    overflow: auto;
+    margin-bottom: 20px;
 }
